kubernetes/apps/downloads/radarr/app/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.clustrs.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Radarr"
    gethomepage.dev/description: "Movie automation"
    gethomepage.dev/group: "Downloads"
    gethomepage.dev/icon: "radarr"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - "radarr.${DOMAIN_CLUSTER}"
  rules:
    - backendRefs:
        - name: radarr
          port: 7878
